5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1601_820.log
== TEST (2019-04-10 19:12:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = int(input("Qual o valor do saque? "))
if VAlor>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	peint(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if VAlor>0 and VALOR%2==0:
NameError: name 'VAlor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:13:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = int(input("Qual o valor do saque? "))
if VAlor>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	peint(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if VAlor>0 and VALOR%2==0:
NameError: name 'VAlor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:13:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	peint(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    nota2 = (valor- aux1- aux2)//2
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:14:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	peint(nota2)
	

-- EXECUTION TIME:
0.138592
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/820/main.py", line 15, in <module>
    nota2 = (valor- aux1- aux2)//2
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:14:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	peint(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    nota2 = (valor- aux1- aux2)//2
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    nota2 = (valor- aux1- aux2)//2
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    nota2 = (valor- aux1- aux2)//2
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:16:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    nota2 = (valor- aux1- aux2)//2
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:18:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    nota2 = (valor- aux1- aux2)//2
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:18:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = int(input("Qual o valor do saque? "))
if VALOR>0 and VALOR % 2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    nota2 = (valor- aux1- aux2)//2
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:21:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = input("Qual o valor do saque? ")
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if VALOR>0 and VALOR%2==0:
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:21:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = input("Qual o valor do saque? ")
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)
	

-- EXECUTION TIME:
0.172665
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/820/main.py", line 10, in <module>
    if VALOR>0 and VALOR%2==0:
TypeError: unorderable types: str() > int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:22:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = input("Qual o valor do saque? ")
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if VALOR>0 and VALOR%2==0:
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:28:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = input("Qual o valor do saque? ")
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if VALOR>0 and VALOR%2==0:
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 01:25:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016





VALOR = input()
if VALOR>0 and VALOR%2==0:
	nota50 = VALOR//50
	aux1 = nota50*50
	nota10 = (VALOR - aux1)//10
	aux2 = nota10*10
	nota2 = (valor- aux1- aux2)//2
	print(nota50)
	print(nota10)
	print(nota2)
	

-- EXECUTION TIME:
0.165348
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/820/main.py", line 10, in <module>
    if VALOR>0 and VALOR%2==0:
TypeError: unorderable types: str() > int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
